--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.2",
     "axios": "^1.10.0",
     "framer-motion": "^12.19.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
-    "tailwind-scrollbar": "^3.1.0"
+    "react-tsparticles": "^2.12.2",
+    "tailwind-scrollbar": "^3.1.0",
+    "three": "^0.181.2",
+    "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
